--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.fruitlister"
+        applicationId "com.luizalberto.recyclerviewfragment"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
