--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.fruitlister"
+        applicationId "com.luizalberto.recyclerviewfragment"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
@@ -98,7 +98,8 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
-
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // Room
     def room_version = "2.2.5"
 
